// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoRegressionStack expect 1`] = `
"Property failed after 2 tests
{ seed: 42, path: "1:0:1:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0", endOnFailure: true }
Counterexample: [0,1]
Shrunk 32 time(s)
Got error: [2mexpect([22m[31mreceived[39m[2m).[22mtoBeGreaterThanOrEqual[2m([22m[32mexpected[39m[2m)[22m

Expected: >= [32m1[39m
Received:    [31m0[39m
    at /workspaces/fast-check/packages/fast-check/test/e2e/NoRegressionStack.spec.ts:23:21
    at Property.predicate (/workspaces/fast-check/packages/fast-check/src/check/property/Property.ts:23:56)
    at Property.predicate [as run] (/workspaces/fast-check/packages/fast-check/src/check/property/Property.generic.ts:133:27)
    at run (/workspaces/fast-check/packages/fast-check/src/check/runner/Runner.ts:37:26)
    at runIt (/workspaces/fast-check/packages/fast-check/src/check/runner/Runner.ts:154:7)
    at Object.check (/workspaces/fast-check/packages/fast-check/src/check/runner/Runner.ts:206:15)
    at /workspaces/fast-check/packages/fast-check/test/e2e/NoRegressionStack.spec.ts:21:10
    at _toThrowErrorMatchingSnapshot (/workspaces/fast-check/node_modules/jest-snapshot/build/index.js:561:7)
    at Object.toThrowErrorMatchingSnapshot (/workspaces/fast-check/node_modules/jest-snapshot/build/index.js:461:10)
    at __EXTERNAL_MATCHER_TRAP__ (/workspaces/fast-check/node_modules/expect/build/index.js:317:30)
    at Object.throwingMatcher [as toThrowErrorMatchingSnapshot] (/workspaces/fast-check/node_modules/expect/build/index.js:318:15)
    at Object.<anonymous> (/workspaces/fast-check/packages/fast-check/test/e2e/NoRegressionStack.spec.ts:27:7)
    at Promise.then.completed (/workspaces/fast-check/node_modules/jest-circus/build/utils.js:293:28)
    at new Promise (<anonymous>)
    at callAsyncCircusFn (/workspaces/fast-check/node_modules/jest-circus/build/utils.js:226:10)
    at _callCircusTest (/workspaces/fast-check/node_modules/jest-circus/build/run.js:248:40)
    at _runTest (/workspaces/fast-check/node_modules/jest-circus/build/run.js:184:3)
    at _runTestsForDescribeBlock (/workspaces/fast-check/node_modules/jest-circus/build/run.js:86:9)
    at _runTestsForDescribeBlock (/workspaces/fast-check/node_modules/jest-circus/build/run.js:81:9)
    at run (/workspaces/fast-check/node_modules/jest-circus/build/run.js:26:3)
    at runAndTransformResultsToJestFormat (/workspaces/fast-check/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:120:21)
    at jestAdapter (/workspaces/fast-check/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
    at runTestInternal (/workspaces/fast-check/node_modules/jest-runner/build/runTest.js:367:16)
    at runTest (/workspaces/fast-check/node_modules/jest-runner/build/runTest.js:444:34)

Hint: Enable verbose mode in order to have the list of all failing values encountered during the run"
`;

exports[`NoRegressionStack not a function 1`] = `
"Property failed after 1 tests
{ seed: 42, path: "0:0", endOnFailure: true }
Counterexample: [0]
Shrunk 1 time(s)
Got TypeError: v is not a function
    at /workspaces/fast-check/packages/fast-check/test/e2e/NoRegressionStack.spec.ts:34:12
    at Property.predicate (/workspaces/fast-check/packages/fast-check/src/check/property/Property.ts:23:56)
    at Property.predicate [as run] (/workspaces/fast-check/packages/fast-check/src/check/property/Property.generic.ts:133:27)
    at run (/workspaces/fast-check/packages/fast-check/src/check/runner/Runner.ts:37:26)
    at runIt (/workspaces/fast-check/packages/fast-check/src/check/runner/Runner.ts:154:7)
    at Object.check (/workspaces/fast-check/packages/fast-check/src/check/runner/Runner.ts:206:15)
    at /workspaces/fast-check/packages/fast-check/test/e2e/NoRegressionStack.spec.ts:32:10
    at _toThrowErrorMatchingSnapshot (/workspaces/fast-check/node_modules/jest-snapshot/build/index.js:561:7)
    at Object.toThrowErrorMatchingSnapshot (/workspaces/fast-check/node_modules/jest-snapshot/build/index.js:461:10)
    at __EXTERNAL_MATCHER_TRAP__ (/workspaces/fast-check/node_modules/expect/build/index.js:317:30)
    at Object.throwingMatcher [as toThrowErrorMatchingSnapshot] (/workspaces/fast-check/node_modules/expect/build/index.js:318:15)
    at Object.<anonymous> (/workspaces/fast-check/packages/fast-check/test/e2e/NoRegressionStack.spec.ts:38:7)
    at Promise.then.completed (/workspaces/fast-check/node_modules/jest-circus/build/utils.js:293:28)
    at new Promise (<anonymous>)
    at callAsyncCircusFn (/workspaces/fast-check/node_modules/jest-circus/build/utils.js:226:10)
    at _callCircusTest (/workspaces/fast-check/node_modules/jest-circus/build/run.js:248:40)
    at _runTest (/workspaces/fast-check/node_modules/jest-circus/build/run.js:184:3)
    at _runTestsForDescribeBlock (/workspaces/fast-check/node_modules/jest-circus/build/run.js:86:9)
    at _runTestsForDescribeBlock (/workspaces/fast-check/node_modules/jest-circus/build/run.js:81:9)
    at run (/workspaces/fast-check/node_modules/jest-circus/build/run.js:26:3)
    at runAndTransformResultsToJestFormat (/workspaces/fast-check/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:120:21)
    at jestAdapter (/workspaces/fast-check/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
    at runTestInternal (/workspaces/fast-check/node_modules/jest-runner/build/runTest.js:367:16)
    at runTest (/workspaces/fast-check/node_modules/jest-runner/build/runTest.js:444:34)

Hint: Enable verbose mode in order to have the list of all failing values encountered during the run"
`;

exports[`NoRegressionStack throw 1`] = `
"Property failed after 2 tests
{ seed: 42, path: "1:0:1:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0", endOnFailure: true }
Counterexample: [0,1]
Shrunk 32 time(s)
Got error: a must be >= b
    at /workspaces/fast-check/packages/fast-check/test/e2e/NoRegressionStack.spec.ts:11:19
    at Property.predicate (/workspaces/fast-check/packages/fast-check/src/check/property/Property.ts:23:56)
    at Property.predicate [as run] (/workspaces/fast-check/packages/fast-check/src/check/property/Property.generic.ts:133:27)
    at run (/workspaces/fast-check/packages/fast-check/src/check/runner/Runner.ts:37:26)
    at runIt (/workspaces/fast-check/packages/fast-check/src/check/runner/Runner.ts:154:7)
    at Object.check (/workspaces/fast-check/packages/fast-check/src/check/runner/Runner.ts:206:15)
    at /workspaces/fast-check/packages/fast-check/test/e2e/NoRegressionStack.spec.ts:8:10
    at _toThrowErrorMatchingSnapshot (/workspaces/fast-check/node_modules/jest-snapshot/build/index.js:561:7)
    at Object.toThrowErrorMatchingSnapshot (/workspaces/fast-check/node_modules/jest-snapshot/build/index.js:461:10)
    at __EXTERNAL_MATCHER_TRAP__ (/workspaces/fast-check/node_modules/expect/build/index.js:317:30)
    at Object.throwingMatcher [as toThrowErrorMatchingSnapshot] (/workspaces/fast-check/node_modules/expect/build/index.js:318:15)
    at Object.<anonymous> (/workspaces/fast-check/packages/fast-check/test/e2e/NoRegressionStack.spec.ts:16:7)
    at Promise.then.completed (/workspaces/fast-check/node_modules/jest-circus/build/utils.js:293:28)
    at new Promise (<anonymous>)
    at callAsyncCircusFn (/workspaces/fast-check/node_modules/jest-circus/build/utils.js:226:10)
    at _callCircusTest (/workspaces/fast-check/node_modules/jest-circus/build/run.js:248:40)
    at _runTest (/workspaces/fast-check/node_modules/jest-circus/build/run.js:184:3)
    at _runTestsForDescribeBlock (/workspaces/fast-check/node_modules/jest-circus/build/run.js:86:9)
    at _runTestsForDescribeBlock (/workspaces/fast-check/node_modules/jest-circus/build/run.js:81:9)
    at run (/workspaces/fast-check/node_modules/jest-circus/build/run.js:26:3)
    at runAndTransformResultsToJestFormat (/workspaces/fast-check/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:120:21)
    at jestAdapter (/workspaces/fast-check/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
    at runTestInternal (/workspaces/fast-check/node_modules/jest-runner/build/runTest.js:367:16)
    at runTest (/workspaces/fast-check/node_modules/jest-runner/build/runTest.js:444:34)

Hint: Enable verbose mode in order to have the list of all failing values encountered during the run"
`;
